name:                servant-subscriber
version:             0.2.0.1
synopsis:            When REST is not enough ...
description:         Please see Readme.md
homepage:            http://github.com/eskimor/servant-subscriber#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Klotzner
maintainer:          robert Dot klotzner A T gmx Dot at
copyright:           Copyright: (c) 2016 Robert Klotzner
category:            Web
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

extra-source-files:  Readme.md

library
  hs-source-dirs:      src
  exposed-modules:
                       Servant.Subscriber
                     , Servant.Subscriber.Backend
                     , Servant.Subscriber.Backend.Wai
                     , Servant.Subscriber.Client
                     , Servant.Subscriber.Request
                     , Servant.Subscriber.Response
                     , Servant.Subscriber.Subscribable
                     , Servant.Subscriber.Types
  build-depends:       aeson >= 0.11.2  && < 0.12
                     , async
                     , attoparsec
                     , base >= 4.7 && < 5
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , directory >= 1.2.2.0
                     , filepath
                     , http-types
                     , lens
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , network-uri
                     , servant
                     , servant-foreign
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

executable psGenerator
  hs-source-dirs:      app
  main-is:             PSGenerator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-subscriber
                     , purescript-bridge >= 0.6 && < 0.7
  default-language:    Haskell2010

test-suite servant-subscriber-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                       aeson
                     , aeson-compat
                     , attoparsec >= 0.13.0.1
                     , base
                     , base-compat >= 0.9.0
                     , blaze-html >= 0.8.1.1
                     , blaze-markup >= 0.7.0.3
                     , bytestring >= 0.10.6.0
                     , directory >= 1.2.2.0
                     , http-media >= 0.6.3
                     , lucid
                     , mtl >= 2.2.1
                     , servant-foreign
                     , servant-server
                     , servant-subscriber
                     , string-conversions >= 0.4
                     , time >= 1.5.0.1
                     , wai
                     , warp
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eskimor/servant-subscriber
