name:                servant-subscriber
version:             0.5.0.2
synopsis:            When REST is not enough ...
description:         Please see Readme.md
homepage:            http://github.com/eskimor/servant-subscriber#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Klotzner
maintainer:          robert Dot klotzner A T gmx Dot at
copyright:           Copyright: (c) 2016 Robert Klotzner
category:            Web
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

extra-source-files:  Readme.md

library
  hs-source-dirs:      src
  exposed-modules:
                       Servant.Subscriber
                     , Servant.Subscriber.Backend
                     , Servant.Subscriber.Backend.Wai
                     , Servant.Subscriber.Client
                     , Servant.Subscriber.Request
                     , Servant.Subscriber.Response
                     , Servant.Subscriber.Subscribable
                     , Servant.Subscriber.Types
  build-depends:       base >= 4.7 && < 6.0
                     , aeson >= 0.11.2
                     , async
                     , attoparsec
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , directory >= 1.2.2.0
                     , filepath
                     , http-types
                     , lens
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , network-uri
                     , servant
                     , servant-foreign
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

executable subscriber-psGenerator
  hs-source-dirs:      app
  main-is:             PSGenerator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-subscriber
                     , purescript-bridge >= 0.6
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/eskimor/servant-subscriber
